# where-in-pi

./: Cargo.toml  Dockerfile  README.md  generate_pi.py  render.yaml
UI/: index.html  script.js  style.css
data/: pi_million.txt
src/: main.rs  pi.rs
